@@ -1,5 +1,7 @@
 Changes in ??
 =============
+2007-04-30 Benno Schulenberg
+	* Fixed up NLS for fuser
 
 Changes in 22.5
 ===============
